force-app/main/default/objects/Position__c/fields/Employment_Website__c.field-meta.xml
<CustomField>
    <fullName>Employment_Website__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Website</label>
    <referenceTo>Employment_Website__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>