force-app/main/default/objects/Position__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <label>Sub Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Functional_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frontend</fullName>
            </value>
            <value>
                <fullName>Backend</fullName>
            </value>
            <value>
                <fullName>Manual Testing</fullName>
            </value>
            <value>
                <fullName>Automation Testing</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>