force-app/main/default/objects/Position__c/validationRules/MINPAY_LESS_THAN_MAX_PAY.validationRule-meta.xml
<ValidationRule>
    <fullName>MINPAY_LESS_THAN_MAX_PAY</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c &gt;= Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Min Pay must be less than Max Pay</errorMessage>
</ValidationRule>